separated chapters in a separate files

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,6 +9,7 @@ EXTRA_DIST = \
 	docs/*.html \
 	docs/api/*.html \
 	docs/api/xmlsec.sgml \
+	docs/api/chapters/*.sgml \
 	docs/api/images \
 	docs/images \
 	examples \
